chore(setup): fix Windows Flutter build and align Gradle with Java version

--- a/flutter_app/android/build.gradle
+++ b/flutter_app/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0'
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,10 +16,9 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
