--- a/flutter_app/android/app/src/main/AndroidManifest.xml
+++ b/flutter_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application
-        android:label="flutter_app"
+        android:label="flutter_app_android"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
