--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -39,18 +39,21 @@ dependencies:
   # The following adds the http package to your application.
   # Use with the http package for making HTTP requests.
   http: ^1.4.0
-
+  video_player: ^2.10.0
+  web_socket_channel: ^3.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mobile_scanner: ^3.5.2
   fluttertoast: ^8.2.12
+  provider: ^6.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +69,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/videos/
+    - assets/sounds/
+    - assets/image_sequence/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
